RESOLVED FIXED209962
[GTK][WPE] Scrollbar handle has no minimum size
https://bugs.webkit.org/show_bug.cgi?id=209962
Summary [GTK][WPE] Scrollbar handle has no minimum size
Alice Mikhaylenko
Reported 2020-04-03 06:28:13 PDT
Created attachment 395370 [details] Screenshot See screenshot. An easy page to reproduce is https://planet.webkitgtk.org/
Attachments
Screenshot (58.51 KB, image/png)
2020-04-03 06:28 PDT, Alice Mikhaylenko
no flags
Patch (1.63 KB, patch)
2020-04-14 03:19 PDT, Carlos Garcia Campos
aperez: review+
Carlos Garcia Campos
Comment 1 2020-04-14 03:19:53 PDT
Carlos Garcia Campos
Comment 2 2020-04-14 05:19:15 PDT
Note You need to log in before you can comment on or make changes to this bug.