[GTK][WPE] Scrollbar handle has no minimum size https://bugs.webkit.org/show_bug.cgi?id=209962

Reviewed by Adrian Perez de Castro.

Set a minimum thumb length.

* platform/adwaita/ScrollbarThemeAdwaita.cpp:
(WebCore::ScrollbarThemeAdwaita::minimumThumbLength):

Canonical link: https://commits.webkit.org/223367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260071 268f45cc-cd09-0410-ab3c-d52691b4dbfc